crates/swc_ecma_parser/tests/test262-error-references/fail/324ab48c6d89125d.js.stderr
error: Unexpected token `.`. Expected target
 --> $DIR/tests/test262-parser/fail/324ab48c6d89125d.js:1:20
  |
1 | function f() { new..target; }
  |                    ^

